fix: :rotating_light: 전역으로 선언되어 있던 text-align 삭제

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@
 * {
 	box-sizing: border-box;
 	font-family: 'Noto Sans', sans-serif;
-	text-align: initial;
 }
 
 #root {
